# UCU_CUDA_virus_evolution_simulation

./: .~lock.COVID-2019-Simulation_abstract.odt#  COVID-2019-Simulation_abstract.odt  README.md
CUDA_myralllka/: CMakeLists.txt  a.out
analysys part/: normality_analysis.py  phase_analysis.py  presentation.txt  test_plot_phase.py
analysys part/analysis_results/: analysis_prepaper.txt
cuda_integral/: CMakeLists.txt  cuda_resource_test.cu  execution.conf  main.cpp  main.cu  start.sh
cuda_integral/include/: speed_tester.h
cuda_integral/include/cuda/: cuda_integrate.cuh
cuda_integral/include/cuda_impl/: cuda_assert.cuh  cuda_integrate.cuh
cuda_integral/include/math/: integration_args.h  langermann_f.h  manual_integration.h
cuda_integral/include/option_parser/: ConfigFileOpt.h
cuda_integral/src/cuda_impl/: cuda_integrate.cu
cuda_integral/src/math/: langermann_f.cpp
cuda_integral/src/option_parser/: ConfigFileOpt.cpp
cuda_like_linear/: .gitignore  CMakeLists.txt  main.cpp  simulation.conf
cuda_like_linear/includes/: code_control.h  simul_helpers.h
cuda_like_linear/includes/file_interface/: conf_parser.h  parser_exception.h
cuda_like_linear/includes/matrix/: code_control.h  m_matrix.h
cuda_like_linear/scripts/: normality_analysis.py  simul_visual.py
cuda_like_linear/src/: simul_helpers.cpp
cuda_like_linear/src/file_interface/: conf_parser.cpp
cuda_like_linear/src/matrix/: m_matrix.cpp
cuda_sandbox/: CMakeLists.txt  main.cu  run.sh
cuda_sandbox/include/: vec_add.cuh
cuda_sandbox/src/: vec_add.cu
cuda_simulation/: .gitignore  CMakeLists.txt  cuda_test.cu  main.cu  requirements.txt  simulation.conf  start.sh
cuda_simulation/includes/: cuda_simulation.cuh  simul_helpers.cuh  simul_helpers.h  speed_tester.h
cuda_simulation/includes/file_interface/: conf_parser.h
cuda_simulation/scripts/: run_n_times.sh  simul_visual.py
cuda_simulation/src/: cuda_simulation.cu  simul_helpers.cpp
linear_cpp_sym/: .gitignore  CMakeLists.txt  main.cpp  requirements.txt  res.tar.xz  res.txt  simulation.conf  snap.txt  snap2.txt  start.sh
linear_cpp_sym/includes/: constants.h  field.h  person.h  speed_tester.h  state.cpp  state.h  state_functions.cpp  state_functions.h  statistics.h
linear_cpp_sym/includes/file_interface/: conf_parser.h
linear_cpp_sym/includes/objects/: field.h  person.h  state_obj.h
linear_cpp_sym/scripts/: normality_analysis.py  run_n_times.sh  simul_visual.py  test_plot_phase.py
linear_cpp_sym/src/: state_functions.cpp
linear_cpp_sym/src/file_interface/: conf_parser.cpp
linear_cpp_sym/src/objects/: field.cpp  person.cpp  state_obj.cpp
python_first_try/: constants.py  curses_ui.py  game.py  main.py  states.py
